# rxtx

./: .cvsignore  .gitignore  .hgignore  .hgtags  AUTHORS  BeOS  COPYING  ChangeLog  INSTALL  MacOSX  Makefile.am  Makefile.in  Makefile.lcc  Makefile.macosx  Makefile.mingw32  Makefile.msvc  Makefile.nativemingw32  PORTING  README  README.IPAQ  README.OSX  README.SCO  RMISecurityManager.html  SerialPortInstructions.txt  TODO  _config.yml  acinclude.m4  aclocal.m4  autogen.sh  buildtest  buildwin32  config.h.in  configure  configure.in  index.html  ltmain.sh  mingw-compiler-wrapper  mingw.conf  mingw.func  mingw32  (+4 more)
.github/workflows/: manually.yml  rxtx-distribution.yml
CNI/: CommDriver.java  CommPort.java  CommPortEnumerator.java  CommPortIdentifier.java  CommPortOwnershipListener.java  Makefile  NoSuchPortException.java  PortInUseException.java  README  RXTXCommDriver.java  RXTXPort.java  RXTXVersion.java  SerialImp.c  SerialImp.h  SerialPort.java  SerialPortEvent.java  SerialPortEventListener.java  Simple.Java  UnSupportedLoggerException.java  UnsupportedCommOperationException.java  Zystem.java  config.h  fuserImp.c
MACOSX_IDE/CW/: CWUnsuppCommOpException.java  LibSerial.mcp  config.h  libI2C.jnilib  libParallel.jnilib  libRS485.jnilib  libSerial.exp  libSerial.jnilib  librxtxSerial.jnilib  precomp.h  startpoint.c
MACOSX_IDE/ForPackageMaker/: RXTX.pkg.sea.hqx  RXTX.pkg.sit.hqx  RXTX.pmsp  RXTX_Jag.pkg.sit.hqx  RXTX_Tiger.pkg.sitx.hqx  RXTX_Tiger.pmproj.sitx.hqx
MACOSX_IDE/ForPackageMaker/Resources/: RXTX.pre_install  ReadMe.rtf  Welcome.rtf  preupgrade
MACOSX_IDE/PB/: LibSerial.pbproj.sit.hqx  LibSerialUniversal.xcodeproj.sitx.hqx  config.h  startpoint.c
MACOSX_IDE/XCode/: .cvsignore  config.h
MACOSX_IDE/XCode/LibSerialUniversal.xcodeproj/: .cvsignore  project.pbxproj
MACOSX_IDE/Xcode3/RXTX.xcodeproj/: .cvsignore  project.pbxproj
MACOSX_IDE/Xcode3/ant/: build.xml
MACOSX_IDE/Xcode3/src/: config.h
Rewrite2010/env/ant/: build.xml
Rewrite2010/env/eclipse/: README.txt
Rewrite2010/env/msvc/: README.txt
Rewrite2010/src/c/include/: Dispatcher.cpp  JNI_Support.cpp  JNI_Support.h  RXTX_Classes.cpp  RXTX_Classes.h  RXTX_Exceptions.cpp  RXTX_Exceptions.h  RXTX_Globals.h  RXTX_Loopbacks.cpp  RXTX_Loopbacks.h  gnu_io_Dispatcher.h
Rewrite2010/src/c/windows/: W32_Classes.h  W32_ParallelPort.cpp  W32_SerialPort.cpp  W32_Support.cpp
WinCE/: README  StdAfx.cpp  StdAfx.h  gnu_io_RXTXCommDriver.cpp  gnu_io_RXTXCommDriver.h  gnu_io_RXTXPort.cpp  gnu_io_RXTXPort.h  rxtxHelpers.cpp  rxtxHelpers.h  rxtxSerial.cpp  rxtxSerial.vcp  rxtxserial.dsp
_includes/: book-nav.html  nav.html
_layouts/: book-article.html  book.html  build.html  codeExample.html  default.html  hero.html  marketing.html  post.html
_plugins/: generate_sitemap.rb
be/: pom.xml
be-linux-i386/: pom.xml
be-linux-x86_64/: pom.xml
be-windows-i386/: pom.xml
be-windows-x86_64/: pom.xml
be/src/main/c/: ParallelImp.c  SerialImp.c  SerialImp.cpp
contrib/: ChangePackage.sh  LeakTest1.java  SNComHandler.java  SimpleRead.java  SimpleSnuV1.java  SimpleWrite.java  Test.java  TestMonitorThread.java  changecvsroot.sh  fixperm.sh  rxtx.proj  testSerial.c
contrib/MAcOSX/RXTXInstaller/: Manifest  RXTXInstaller.xcodeproj.sitx.hqx
contrib/MAcOSX/RXTXInstaller/jnlp/: artistic-license.html  libAuthKit.jnilib  rxtxinstaller.jnlp  signer.sh
cross-toolchain-wrapper/: pom.xml
cross-toolchain-wrapper/src/assemble/: src.xml
cross-toolchain-wrapper/src/main/bash/: apple64  mingw32  (+8 more)
debian/: README.debian  changelog  conffiles  control  copyright  dirs  javax.comm.properties  postinst  rules
fe/: pom.xml
librxtxSerial-linux-armel/: pom.xml
librxtxSerial-linux-x86/: pom.xml
librxtxSerial-linux-x86_64/: pom.xml
librxtxSerial-osx-x86_64/: pom.xml
mingw-wrapper/: pom.xml
mingw-wrapper/src/assemble/: src.xml
native-linux-arm/: pom.xml
native-linux-i386/: pom.xml
native-linux-x86/: pom.xml
native-linux-x86_64/: pom.xml
native-osx-x86_64/: pom.xml
native-windows-i386/: pom.xml
native-windows-x86/: mingw.func  mingw32  pom.xml
native-windows-x86_64/: mingw64  pom.xml
packaging/: pom.xml
packaging/src/assemble/: jar.xml
resources/css/: rxtx-icons.css  rxtx.css
resources/img/: dependencyGraph.graphml
resources/js/: bootstrap-img-lightbox-tooltip.js
rxtx-api/: pom.xml
rxtx-java/: pom.xml
rxtx-native/: pom.xml
rxtx-native/src/assemble/: src.xml
rxtxSerial/: pom.xml
rxtxSerial-bin/: pom.xml
rxtxSerial-bin/src/assemble/: jar.xml  release.xml
rxtxSerial-java/: pom.xml
rxtxSerial-java/src/assemble/: src.xml
rxtxSerial-linux-armel/: pom.xml
rxtxSerial-linux-armhf/: pom.xml
rxtxSerial-linux-x86/: pom.xml
rxtxSerial-linux-x86_64/: pom.xml
rxtxSerial-native/: pom.xml
rxtxSerial-osx-x86_64/: pom.xml
rxtxSerial-test/: pom.xml
rxtxSerial-windows-x86/: pom.xml
rxtxSerial-windows-x86_64/: pom.xml
rxtxSerial/src/assemble/: development.xml  release.xml
src/: .cvsignore  I2CImp.c  I2CImp.h  ParallelImp.c  ParallelImp.h  RS485Imp.c  RS485Imp.h  RawImp.c  RawImp.h  Serial.def  SerialImp.c  SerialImp.cpp  SerialImp.h  fixup.c  fuserImp.c  init.c  portmode.c  termios.c  win32termios.h
src/gnu/io/: CommDriver.java  CommPort.java  CommPortEnumerator.java  CommPortIdentifier.java  CommPortOwnershipListener.java  Configure.java  CpoList.java  CpoListEntry.java  I2C.java  I2CPort.java  I2CPortEvent.java  I2CPortEventListener.java  LPRPort.java  Native.java  NoSuchPortException.java  OwnershipEventThread.java  ParallelPort.java  ParallelPortEvent.java  ParallelPortEventListener.java  Platform.java  PortInUseException.java  RS485.java  RS485Port.java  RS485PortEvent.java  RS485PortEventListener.java  RXTXCommDriver.java  RXTXPort.java  RXTXVersion.java  Raw.java  RawPort.java  RawPortEvent.java  RawPortEventListener.java  SerialPort.java  SerialPortEvent.java  SerialPortEventListener.java  UnSupportedLoggerException.java  UnsupportedCommOperationException.java  Zystem.java
src/lfd/: INSTALL  lockdaemon.c  lockdaemon.c.noinetd
src/psmisc/: README  fuser.c  testing.c
(+108 files in other folders)
