#-------------------------------------------------------------------------
#   rxtx is a native interface to serial ports in java.
#   Copyright 1997-2000 by Trent Jarvi trentjarvi@yahoo.com.
#
#   This library is free software; you can redistribute it and/or
#   modify it under the terms of the GNU Library General Public
#   License as published by the Free Software Foundation; either
#   version 2 of the License, or (at your option) any later version.
#
#   This library is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#   Library General Public License for more details.
#
#   You should have received a copy of the GNU Library General Public
#   License along with this library; if not, write to the Free
#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#-------------------------------------------------------------------------
AC_INIT(src/SerialImp.c)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_SYSTEM
AC_MSG_WARN(Trying libtool.  If the following fails install libtool)
AM_PROG_LIBTOOL
AM_INIT_AUTOMAKE(Serial,1.2.10)
AC_PROG_CC
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(sys/fcntl.h)
AC_CHECK_HEADERS(sys/file.h)
AC_CHECK_HEADERS(sys/signal.h)
AC_CHECK_HEADERS(termios.h)
AC_PROG_GCC_TRADITIONAL
AC_SUBST(WINDOWS_JAVA_INCLUDE)
AC_SUBST(JAVAINCLUDE)
AC_SUBST(JAVANATINC)
AC_SUBST(JCLASSPATH)
AC_SUBST(JAVA_H_CLASSPATH)
AC_SUBST(TOP)
AC_SUBST(JPATH)
AC_SUBST(TARGETLIB)
AC_SUBST(LDFLAG)
AC_SUBST(CFLAGS)
AC_SUBST(VERBOSE_IOEXCEPTIONS)
AC_SUBST(THREAD_FLAG)
AC_SUBST(IDENTIFIERS)
AC_SUBST(OS_NAME)
AC_SUBST(OS_ARCH)
AC_SUBST(OS_VERSION)
AC_SUBST(JAVA_VERSION)
AC_SUBST(JAVA_VENDOR)
AC_SUBST(JAVA_HOME)
AC_SUBST(JAVA_LIBRARY_PATH)
AC_SUBST(JAVA_CLASS_PATH)
AC_SUBST(JAVA_CLASS_VERSION)
AC_SUBST(JAVAH_FIX)
AC_SUBST(JCL_PATH)
AC_SUBST(RXTX_PATH)
JCL_PATH=lib
TOP="`pwd`"


[case "$host_os" in
	*-gnu)
	CFLAGS="$CFLAGS -D_POSIX_SOURCE";;
	*);;
esac]
AC_ARG_ENABLE(RXTXIDENT,
	[  --enable-RXTXIDENT      RXTX CommPortIdentifier support (not implemented) [default=no]],
	echo $enable_RXTXIDENT, 
	enable_RXTXIDENT="yes"
)
	if test x$enable_RXTXIDENT = xyes; then 
	IDENTIFIERS="\
\$(TOP)/javax/comm/UnsupportedCommOperationException.class \
\$(TOP)/javax/comm/CommPort.class \
\$(TOP)/javax/comm/CommDriver.class \
\$(TOP)/javax/comm/CommPortOwnershipListener.class \
\$(TOP)/javax/comm/NoSuchPortException.class  \
\$(TOP)/javax/comm/PortInUseException.class \
IDENT \
I2C \
RS485 \
RS232 \
\$(TOP)/javax/comm/RS485.class  \
\$(TOP)/javax/comm/I2C.class  \
PARALLEL \
\$(TOP)/javax/comm/ParallelPortEventListener.class \
\$(TOP)/\$(target_alias)/libSerial.la \
\$(TOP)/\$(target_alias)/libParallel.la"
	fi
AC_ARG_ENABLE(PRINTER,
	[  --enable-PRINTER        PRINTER support (experimental) [default=yes]],
	echo $enable_PRINTER,
	enable_PRINTER="yes"
)
	if test x$enable_PRINTER = xyes; then  
		TARGETLIB="\$(TOP)/\$(target_alias)/libSerial.la \
			\$(TOP)/\$(target_alias)/libParallel.la \
			\$(TOP)/\$(target_alias)/libI2C.la \
			\$(TOP)/\$(target_alias)/libRS485.la"
	else
		TARGETLIB="\$(TOP)/\$(target_alias)/libSerial.la"
	fi
#AC_ARG_ENABLE
#(
#	VERBOSE,
#	[  --enable-VERBOSE        more verbose native io messages [default=yes]],
#	echo $enable_VERBOSE, 
#	enable_VERBOSE="yes"
#)
#   if test x$enable_VERBOSE = xno; then 
#      VERBOSE_IOEXCEPTIONS="-DNO_VERBOSE_IOEXCEPTIONS"
#   fi

AC_ARG_ENABLE(NATIVETHREADS,
	[  --enable-NATIVETHREADS  Use jdk native-threads.  Overrides environment ],
	echo $enable_NATIVETHREADS, 
	enable_NATIVETHREADS="no"
)
if test x$enable_NATIVETHREADS = xyes; then 
	THREAD_FLAG="native"
else
	THREAD_FLAG=""
fi
AC_ARG_ENABLE(FULL_EVENT, 
	[  --enable-FULL_EVENT     Full event notification (linux 2.2)],
	if test x$enable_FULL_EVENT = xyes; then 
		CFLAGS="$CFLAGS -DFULL_EVENT"
		THREADS_FLAG="native"
	fi
)

AC_ARG_ENABLE(JDK_HOME,
	[  --enable-JDK_HOME       get JDK location from \$JDK_HOME],
	if test x$enable_JDK_HOME = xyes; then 
		JPATH="`echo $JDK_HOME`"
		if test x$JDK_HOME = x; then
			AC_MSG_ERROR([Could not find java in \$JDK_HOME.])
		fi
	fi
)
AC_ARG_ENABLE(DEBUG,
	[  --enable-DEBUG          Print debugging info from SerialImp.c],
	if test x$enable_DEBUG = xyes; then 
		CFLAGS="$CFLAGS -DDEBUG"
	fi
)
if test "$JPATH" = ""; then
	JPATH="`which java | sed s#/\bin\/java##`"
	if test x$JPATH = x; then
		AC_MSG_WARN([Could not find java in \$PATH.  Trying \$JDK_HOME.])
		if test x$JDK_HOME = x; then
			AC_MSG_ERROR([Could not find java in \$JDK_HOME.])
		fi
	JPATH="`echo $JDK_HOME`"
	fi
fi
JAVANATINC="\$(JPATH)/`cd $JPATH; find ./include -name jni_md.h|sed s#jni_md\\\\.h##|sed s#\\\\.\\\\/## |head -n1`"
if [ test `find $JPATH/include -name jni_md.h|wc -l` != "1" ]; then
	echo 1>&2
	echo WARNING:  configure is having a hard time determining which  1>&2
	echo directory contains the file jni_md.h.  Edit Makefile and fix the  1>&2
	echo variable JAVANATINC to point to the correct directory. 1>&2
	echo 1>&2
	echo The following options are available: 1>&2
	find $JPATH/include -name jni_md.h|sed s#jni_md\.h## 1>&2
	echo 1>&2
	echo If there are more than one option available the first was selected.  1>&2
	echo 1>&2
	echo Press enter to continue.
	read REPLY
fi
	

cat > conftest.java << EOF
/* this may be usefull for getting around java cobwebs during build */
public class conftest 
{
	public static void main(String[[]] args) 
	{
		System.out.println(System.getProperty(args[[0]]));
	}
}
EOF

$JPATH/bin/javac conftest.java
echo -n checking os.name  " " 1>&6
OS_NAME=`$JPATH/bin/java conftest "os.name"`
echo $OS_NAME 1>&6
echo -n checking os.arch   " " 1>&6
OS_ARCH=`$JPATH/bin/java conftest "os.arch"`
echo $OS_ARCH 1>&6
echo -n checking java.version   " " 1>&6
JAVA_VERSION=`$JPATH/bin/java conftest "java.version"`
echo $JAVA_VERSION 1>&6
echo -n checking java.vendor " " 1>&6
JAVA_VENDOR=`java conftest "java.vendor"`
echo $JAVA_VENDOR 1>&6

echo -n checking os.version   " " 1>&6
OS_VERSION=`uname -r`
echo $OS_VERSION 1>&6
rm -f conftest.java
rm -f conftest.class

#Did you ever think about installing the jar in the standard extension path for
#jdk 1.2?  I manually moved comm.jar and jcl.jar to /usr/local/jdk/jre/lib/ext
#and now I don't need them in my classpath.  I also moved libSerial.so to
#/usr/local/jdk/jre/lib/i386, which is searched automatically for native libs.
#This seems to be the 'standard' way of doing things in 1.2.  Do you think it's
#a good idea?
fix_parameters()
{
	if [ ! grep -q "Driver=javax.comm.RXTXCommDriver" $1 ]; then 
		echo "------------------------------------------------------" 1>&2
		echo "RxTx requires the following information in" 1>&2
		echo " $1:" 1>&2
		echo 1>&2
		echo "Driver=javax.comm.RXTXCommDriver" 1>&2
		echo 1>&2
		echo "The command configure will use to fix this is:" 1>&2
		echo 1>&2
		echo "echo \"Driver=javax.comm.RXTXCommDriver\" > $1" 1>&2
		echo 1>&2
		echo "------------------------------------------------------" 1>&2
		echo -n "Is it ok to place it there now? [[y/n]] "
		read REPLY
		if [ test "$REPLY" = "y" || test "$REPLY" = "Y" ];then 1>&2
			echo "Driver=javax.comm.RXTXCommDriver" > $1; 1>&2
		fi;
	fi;
}
check_prefix()
{
	if test $prefix != "/usr";then 
		echo 1>&2
		echo "WARNING:  configure was not run with option --prefix=/usr" 1>&2
		echo "          Unless /usr/local/lib or the specified prefix is in"  1>&2
		echo "          the linkers path this will cause problems later on." 1>&2
		echo 1>&2
		echo "          Press enter to continue."
		read  REPLY
	fi
}
# an attempt to compile on libc5 linux machines
check_java_headers()
{

cat > conftest.c << EOF
#include <features.h>
int main(int argc, char *argv[])
{
#if defined (__GLIBC__)
        printf("%i\n",__GLIBC__);
#else
	printf("0\n");
#endif
	
	exit(0);
}
EOF
	cc conftest.c -o conftest
	if [ test `./conftest` -lt 2 ];then 
		echo 1>&2
		echo "       WARNING:  Older libc on linux detected.  Patching a local copy of jni_md.h" 1>&2
		echo 1>&2
		ln -s `find $JPATH/include -name jni.h` .
		cp `find $JPATH/include -name typedefs_md.h` .
		# not pretty.  could be cleaned up
		patch << EOF
--- typedefs_md.h	Tue Jan 11 14:17:08 2000
+++ typedefs_md.h.patchtaj	Tue Jan 11 14:15:53 2000
@@ -17,9 +17,6 @@
  */
 
 /* sbb: Johan Vos, why isn't this #ifndef inside the solaris header guard? */
-#ifndef BITSPERCHAR
-#define BITSPERCHAR 8
-#endif
 
 #ifndef _SOLARIS_TYPES_MD_H_
 #define _SOLARIS_TYPES_MD_H_
@@ -28,50 +25,19 @@
 #include <sys/stat.h>
 #include "bool.h"
 
-#if defined(__alpha__)
-typedef unsigned long ptr_int;
-#define PTR_IS_64 1
-#define LONG_IS_64 1
-#else
 typedef unsigned int ptr_int;
 #define PTR_IS_32 1
-#endif
 
 /* don't redefine typedef's on Solaris 2.6 or Later */
 
-#if !defined(_ILP32) && !defined(_LP64)
-
-#ifndef	_UINT64_T
-#define	_UINT64_T
-#ifdef LONG_IS_64
-typedef unsigned long uint64_t;
-#else
 typedef unsigned long long uint64_t;
-#endif
-#define _UINT32_T
 typedef unsigned int uint32_t;
-#if defined(__linux__)
 typedef unsigned int uint_t;
-#endif
-#endif
 
-#ifndef __BIT_TYPES_DEFINED__
-#ifdef (__i386__)
-/* that should get Linux, at least */
 #ifndef	_INT64_T
 #define	_INT64_T
-#ifdef LONG_IS_64
-typedef long int64_t;
-#else
 typedef long long int64_t;
-#endif
-#define _INT32_T
-typedef int int32_t;
-#if defined(__linux__)
-typdef int int_t;
-#endif
-#endif
-#endif /* i386 */
+typedef int int_t;
 #endif /* __BIT_TYPES_DEFINED__ */
 
 #endif	/* !defined(_ILP32) && !defined(_LP64) */
@@ -110,27 +76,15 @@
 #endif
 
 
-/* On Intel these conversions have to be method calls and not typecasts.
-   See the win32 typedefs_md.h file */
-#if ((defined(i386) || defined (__i386)) && defined(__solaris__)) || defined(__powerpc__)
-
-extern int32_t float2l(float f);
-extern int32_t double2l(double d);
-extern int64_t float2ll(float f);
-extern int64_t double2ll(double d);
-
-#else /* not solaris x386 or linux powerpc*/
-
 #define float2l(f)	(f)
 #define double2l(f)	(f)
 #define float2ll(f)	((int64_t) (f))
 #define double2ll(f)	((int64_t) (f))
 
-#endif /* i386 */
-
 
 #define ll2float(a)	((float) (a))
 #define ll2double(a)	((double) (a))
+#define double2ll(f)    ((int64_t) (f))
 
 /* comparison operators */
 #define ll_ltz(ll)	((ll)<0)
@@ -148,13 +102,7 @@
 
 extern void ll2str(int64_t a, char *s, char *limit);
 
-#if defined(ppc) || defined(__ppc__) || defined(__alpha__) || defined(__sparc__)
-#ifndef HAVE_ALIGNED_DOUBLES
+#if defined(ppc) || defined(__ppc__) || defined(__alpha__)
 #define HAVE_ALIGNED_DOUBLES
-#endif
-#ifndef HAVE_ALIGNED_LONGLONGS
 #define HAVE_ALIGNED_LONGLONGS
 #endif
-#endif
-
-#endif /* !_SOLARIS_TYPES_MD_H_ */
EOF
	fi
	rm -f conftest.c
	rm -f conftest
}
check_kernel_headers()
{
	cat > conftest.c << EOF

#include <linux/version.h>

int main(int argc, char *argv[])
{
	printf(UTS_RELEASE"\n");
	exit(0);
}
EOF
	cc conftest.c -o conftest
	if [ test `uname -r` != `./conftest` ];then 
		echo 1>&2
		echo "       WARNING:  Kernel include files do not match the current kernel" 1>&2
		echo 1>&2
		echo "                 Press enter to continue." 
		read REPLY
	fi
	rm -f conftest.c
	rm -f conftest
}
fix_comm_jar()
{
	if ! test -f $1;then
		echo "------------------------------------------------------" 1>&2
		echo "The JCL extension to RxTx requires comm.jar" 1>&2
		echo "If you intend to use RxTx for commapi support comm.jar" 1>&2
		echo "needs to be located in $1" 1>&2
		echo 1>&2
		echo "You can either quit configure and place the jar in the" 1>&2
		echo "correct location or let this script do it." 1>&2
		echo  1>&2
		echo "------------------------------------------------------" 1>&2
		echo -n "Do you wish to [[Q]]uit or use the [[S]]cript? [[Q/S]] "
		read REPLY
		if [ test "$REPLY" = "q" || test "$REPLY" = "Q" ];then
			echo "When you are done rerun configure"
			exit
		else if [ test "$REPLY" = "s" || test "$REPLY" = "S" ];then
			FILE="null"
			until test -f $FILE;do
				echo "Please enter the full path to comm.jar (example /home/fred/commapi/comm.jar):"
				read FILE
			done;
			if grep -q Win32 $FILE;then 
				echo 1>&2
				echo WARNING: 1>&2
				echo 1>&2
				echo "I've detected A Windows version of comm.jar.   This is known to not work with"  1>&2
				echo "rxtx on UNIX.  Go to  http://java.sun.com/products/javacomm/index.html and " 1>&2
				echo "get the solaris-x86 CommAPI if your target is unix."  1>&2
				echo  1>&2
				echo "Press enter to continue."
				read REPLY
			fi 
			echo -n "Is it ok to copy $FILE to $1?[[y/n]] "
			read REPLY
			if [ test "$REPLY" = "y" || test "$REPLY" = "Y" ];then
				cp $FILE $1
				return
			fi;
		fi;fi;
		echo "configure is unable to continue.  Please try again or manual fix the problem." 1>&2
		exit
	
	fi;
}

JAVAINCLUDE="\$(JPATH)/include"
if test "$CC" = "gcc" || test "$CC"="egcs"; then
	case $JAVA_VENDOR in
	Tran*) #FIXME
		CFLAGS="$CFLAGS -D_BSD_SOURCE -ansi"
		fix_javanatinc jni.h
		JAVAINCLUDE=""
		KAFFE_LIB_FIX="/kaffe"
		;;
	IBM*)
		CFLAGS="$CFLAGS -D_BSD_SOURCE"
		;;
	*)
		CFLAGS="$CFLAGS -D_BSD_SOURCE -ansi"
		;;
	esac
fi
[ case $OS_NAME in 
Linux)
	#check_kernel_headers
	check_java_headers
	case $JAVA_VERSION in
	1.2*) 
		#fix_parameters $JPATH/jre/lib/javax.comm.properties
		#fix_comm_jar $JPATH/jre/lib/ext/comm.jar
		JCLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:$CLASSPATH"
		JAVA_H_CLASSPATH="-classpath .:`find $JPATH/ -name comm.jar |head -n1`"
		JCL_PATH="\$(JPATH)/lib"
		JCL_PATH="jre/lib/ext"

		case $OS_ARCH in
		i386)
			RXTX_PATH="\$(JPATH)/jre/lib/i386"
		;;
		*)
			# best we can do without knowing what java returns
			RXTX_PATH="\$(JPATH)/jre/lib/"
		;;
		esac
		case $OS_VERSION in
		2.2.*|2.3.*)
			CFLAGS="$CFLAGS -DFULL_EVENT"
		;;
		1.*|2.0.*|2.1.*)
		;;
		esac
	;;
	1.*) 
		#fix_parameters $JPATH/lib$KAFFE_LIB_FIX/javax.comm.properties
		#fix_comm_jar $JPATH/lib$KAFFE_LIB_FIX/comm.jar

		check_prefix
		JCLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:\$(JPATH)/lib/jcl.jar:$CLASSPATH"
		JAVA_H_CLASSPATH="\$(JCLASSPATH)"
		RXTX_PATH="\$(prefix)/lib/"
		JAVAH_FIX="if [ ! \$(THREADS_FLAG) ] && [ ! -d com ]; then if [ ! -f \$(JPATH)/lib/comm.jar ]; then echo \"Please install comm.jar from CommAPI in \$(JPATH)/java/lib/ 1>&2\"; else mkdir -p com/sun/comm;\$(JAR) -xf \$(JPATH)/lib/comm.jar;  fi; fi;"
		JCL_PATH="lib"
		case $OS_VERSION in
		2.2.*|2.3.*)
			CFLAGS="$CFLAGS -DFULL_EVENT"
		;;
		1.*|2.0.*|2.1.*)
		;;
		esac
	;;
	esac 
;;
*BSD)
	RXTX_PATH="\$(prefix)/lib"
	JCL_PATH="lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	JCLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:\$(JPATH)/lib/jcl.jar:$CLASSPATH"
	case $JAVA_VERSION in
	1.2*) 
		fix_parameters $JPATH/jre/lib/javax.comm.properties
		#fix_comm_jar $JPATH/jre/lib/ext/comm.jar
		JCLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:$CLASSPATH"
	;;
	1.*) 
		check_prefix
		fix_parameters $JPATH/lib/javax.comm.properties
		#fix_comm_jar $JPATH/lib/comm.jar
	;;
	*)
	;;
	esac
;;
irix*)
	JCL_PATH="lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	JCLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:\$(JPATH)/lib/jcl.jar:$CLASSPATH"
;;
*)
	JCL_PATH="lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	JCLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:\$(JPATH)/lib/jcl.jar:$CLASSPATH"
;;
esac ]
# blah
if test "$target_alias" = i386-mingw32;then
	echo "We need to know what directory the windows java include files"
	echo "are located in.  Please enter the directory now."
	echo
	echo "example /home/jarvi/win32java/include"
	echo
	read REPLY
	WINDOWS_JAVA_INCLUDE="$REPLY"
fi;

AC_OUTPUT(Makefile)



################################  END ########################################



# Toys.  Gota lovem.
#echo -n checking java.home   " "
#JAVA_HOME=`java conftest "java.home"`
#echo $JAVA_HOME
#echo -n checking java.library.path   " "
#JAVA_LIBRARY_PATH=`java conftest "java.library.path"`
#echo $JAVA_LIBRARY_PATH
#echo -n checking java.class.path   " "
#JAVA_CLASS_PATH=`java conftest "java.class.path"`
#echo $JAVA_CLASS_PATH
#echo -n checking java.class.version   " "
#JAVA_CLASS_VERSION=`java conftest "java.class.version"`
#echo $JAVA_CLASS_VERSION
